stderr
JudgeMan.java:112: error: missing return statement
    }
    ^
1 error
